# matc

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Readme.md  array.c  array.h  display.c  display.h  display_utf8.c  fileio.c  fileio.h  main  main.c  matc.h  matrix.c  matrix.h
doc/: build.html  build.sh  index.html  main.c  main.html  style.css
docs/: build.html  compile.html  funcs.html  index.html  main.html  script.js  style.css
docs/sources/: compile.html  compile.sh
template/: array.c  array.h  display.c  display.h  generate.py
